--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#VITE_API_URL=http://143.198.143.11:3000
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=http://157.230.217.53:3000
+# VITE_API_URL=http://localhost:3000
